# nlp_misis_project

./: .gitignore  pyproject.toml
nlp_misis_project/: train.py
nlp_misis_project/datasets/: sarc.py
nlp_misis_project/models/: any_bert.py
research/: data_analysis.ipynb  prepare_data.ipynb
