[tool.poetry]
name = "nlp-misis-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.17.1"
plotly = "^5.24.1"
pandas = "^2.2.3"
nbformat = "^5.10.4"
torch = "^2.5.1"
pytorch-lightning = "^2.5.0.post0"
transformers = "^4.47.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
