[tool.poetry]
name = "nlp-misis-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.17.1"
plotly = "^5.24.1"
pandas = "^2.2.3"
nbformat = "^5.10.4"
torch = "^2.5.1"
pytorch-lightning = "^2.5.0.post0"
transformers = "^4.47.1"
wandb = "^0.19.1"
torchmetrics = "^1.6.0"
pillow = "^11.0.0"
scikit-learn = "^1.6.0"
tiktoken = "^0.8.0"
sentencepiece = "^0.2.0"
notebook = "^7.3.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
